# Brains

./: .gitignore  Cargo.toml  dev.sh  public.pem  rustfmt.toml  schema.sql
frontend/: Cargo.toml  Trunk.toml  index.html  tailwind.css
frontend/src/: login_form_component.rs  main.rs  register_form_component.rs
frontend/src/components/: mod.rs
frontend/src/components/authentication/: login_form_component.rs  mod.rs  register_form_component.rs
frontend/src/components/brainfarts/: brainfart_component.rs  mod.rs  new_brainfart_component.rs
frontend/src/components/general/: error_component.rs  loading_component.rs  mod.rs  nav_link_component.rs  navbar_component.rs  user_info_component.rs
frontend/src/pages/: homepage.rs  loginpage.rs  logoutpage.rs  mod.rs  registerpage.rs
frontend/src/views/: brainfarts_view.rs  mod.rs  new_brainfart_view.rs
server/: Cargo.toml
server/src/: error_responders.rs  main.rs
server/src/autentisering/: mod.rs
server/src/authentication/: mod.rs
server/src/create_models/: mod.rs
server/src/databank/: mod.rs
server/src/databank/create_models/: mod.rs
server/src/databank/losenord_verifiera/: mod.rs
server/src/databank/skaffa_models/: mod.rs
server/src/database/: mod.rs
server/src/database/create_models/: mod.rs
server/src/database/get_models/: mod.rs
server/src/database/password_verification/: mod.rs
shared/: Cargo.toml
shared/src/: lib.rs
