[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
gloo-net = "0.2.5"
log = "0.4.17"
wasm-bindgen-futures = "0.4.33"
wasm-logger = "0.2.0"
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
shared = {path = "../shared"}
web-sys = { version = "0.3.60", features = ["Storage","HtmlButtonElement","Element", "HtmlDivElement", "HtmlElement", "KeyboardEvent"] }
serde = {version = "1.0.151", features = ["derive"]}
serde_json = "1.0.91"
jwt-simple = "0.11.2"
getrandom = { version = "0.2", features = ["js"] }
once_cell = "1.17.0"
