[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.1", features = ["headers"]}
axum-extra = { version = "0.4.2", features = ["spa"] }
clap = { version = "4.0.29", features = ["derive"] }
log = "0.4.17"
tokio = { version = "1.23.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
shared = {path = "../shared"}
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.90"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres","chrono" , "uuid"] }
rand = "0.8.5"
dotenv = "0.15.0"
chrono = "0.4.23"
argon2 = "0.4.1"
rand_core = { version = "0.6.4", features = ["std"] }
jwt-simple = "0.11.2"
